<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">小马天气</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="share">推荐给朋友</string>
    <string name="setting">功能设置</string>
    <string name="about">关于</string>
    <string name="loading">加载中…</string>
    <string name="load_fail">加载失败</string>
    <string name="temp">%s°</string>
    <string name="tempC">%s℃</string>
    <string name="now_max_temp">↑&#160;%s°</string>
    <string name="now_min_temp">↓&#160;%s°</string>
    <string name="hourly_forecast_hum">%s%%</string>
    <string name="hourly_forecast_wind">%s级</string>
    <string name="daily_forecast_temp">%1$s~%2$s°</string>
    <string name="manage_city">城市管理</string>
    <string name="add_city">添加城市</string>
    <string name="image_weather">实景天气</string>
    <string name="moment">身边此刻</string>
    <string name="upload_image">发布</string>
    <string name="view_image">详情</string>
    <string name="network_error">网络异常，请检查网络设置</string>
    <string name="locate_fail">自动定位失败，请稍后再试</string>
    <string name="update_tips">已更新至最新天气</string>
    <string name="refresh_fail">加载失败，请下拉刷新</string>
    <string name="no_more">没有更多了</string>
    <string name="image_open_fail">打开失败，请重试</string>
    <string name="image_save_fail">图片保存失败</string>
    <string name="no_sdcard">请确认已插入SD卡</string>
    <string name="camera_file_name">temp.jpg</string>
    <string name="compress_file_name">IMG_%s.jpg</string>
    <string name="user_name">马儿%s</string>
    <string name="uploading_image">正在上传图片…</string>
    <string name="upload_image_fail">图片上传失败：%s</string>
    <string name="publishing">正在发布…</string>
    <string name="publish_success">成功发布到%s</string>
    <string name="publish_fail">发布失败：%s</string>
    <string name="image_time_praise">%1$s拍摄&#160;&#160;%2$s个赞</string>
    <string name="image_tag">标签&#160;&#160;%s</string>
    <string name="delete">删除</string>
    <string name="whether_delete">是否删除该城市？</string>
    <string name="delete_success">删除成功</string>
    <string name="at_least_one">请至少保留一个城市</string>
    <string name="locating">正在定位…</string>
    <string name="share_content">我正在使用@小马天气，可以随时随地查看天气信息，是您出差、旅行的贴心助手！推荐你也试试：http://fir.im/ponyweather</string>
    <string name="about_project_url">https://github.com/wangchenyan/PonyWeather</string>
    <string name="about_weibo">http://weibo.com/wangchenyan1993</string>
    <string name="about_jianshu">http://www.jianshu.com/users/3231579893ac</string>
    <string name="about_github">https://github.com/wangchenyan</string>
    <string name="no_permission">没有%1$s权限，无法%2$s！</string>
</resources>