<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_image_weather"
        android:icon="@drawable/ic_menu_image"
        android:title="@string/image_weather" />
    <item
        android:id="@+id/action_location"
        android:icon="@drawable/ic_menu_location"
        android:title="@string/manage_city" />
    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/action_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />
        </menu>
    </item>
</menu>